# goobox

./: .SRCINFO  .gitignore  .nvchecker.toml  PKGBUILD  README.md  goobox_kip_version.patch
goobox/: .gitignore  AUTHORS  NEWS  README  goobox.doap  meson.build  meson_options.txt
goobox/data/: meson.build  org.gnome.Goobox.desktop.in.in  org.gnome.Goobox.gschema.xml
goobox/data/appdata/: meson.build  org.gnome.Goobox.appdata.xml.in
goobox/help/: ChangeLog  LINGUAS  meson.build
goobox/help/C/: index.page  preferences.page  shortcuts.page
goobox/help/ca/: ca.po
goobox/help/cs/: cs.po
goobox/help/de/: de.po
goobox/help/el/: el.po
goobox/help/es/: es.po
goobox/help/fr/: fr.po
goobox/help/oc/: oc.po
goobox/help/pl/: pl.po
goobox/help/pt_BR/: pt_BR.po
goobox/help/ro/: ro.po
goobox/help/sl/: sl.po
goobox/help/sv/: sv.po
goobox/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  (+10 more)
goobox/src/: album-info.c  album-info.h  dlg-cover-chooser.c  dlg-cover-chooser.h  dlg-extract.c  dlg-extract.h  dlg-preferences.c  dlg-preferences.h  dlg-properties.c  dlg-properties.h  dlg-ripper.c  dlg-ripper.h  gio-utils.c  gio-utils.h  glib-utils.c  glib-utils.h  gnome-desktop-thumbnail.c  gnome-desktop-thumbnail.h  gnome-thumbnail-pixbuf-utils.c  goo-application-actions-callbacks.c  goo-application-actions-callbacks.h  goo-application-actions-entries.h  goo-application.c  goo-application.h  goo-error.c  goo-error.h  goo-marshal.list  goo-player-info.c  goo-player-info.h  goo-player-progress.c  goo-player-progress.h  goo-player.c  goo-player.h  goo-window-actions-callbacks.c  goo-window-actions-callbacks.h  goo-window-actions-entries.h  goo-window.c  goo-window.h  goobox.gresource.xml  gth-user-dir.c  (+14 more)
goobox/src/ui/: cover-chooser.ui  extract.ui  format-options.ui  gears-menu.ui  goobox.css  menus.ui  preferences.ui  properties.ui  ripper.ui
